kubernetes/evaluations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluations-ms-deployment
  namespace: sa-p7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluations-ms
  template:
    metadata:
      labels:
        app: evaluations-ms
    spec:
      containers:
        - name: evaluations-ms-container
          image: IMAGE_NAME
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: evaluations-ms-service
  namespace: sa-p7
spec:
  selector:
    app: evaluations-ms
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
