kubernetes/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-ms-deployment
  namespace: sa-p7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-ms
  template:
    metadata:
      labels:
        app: users-ms
    spec:
      containers:
        - name: users-ms-container
          image: IMAGE_NAME_SETTER
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: users-ms-service
  namespace: sa-p7
spec:
  selector:
    app: users-ms
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
